--- a/composer.json
+++ b/composer.json
@@ -14,7 +14,7 @@
         "guzzlehttp/guzzle": "^6.3",
         "laravel/framework": "^7.0",
         "laravel/tinker": "^2.0",
-        "satis2020/models-package": "^1.0"
+        "satis2020/metadata-package": "^1.0"
     },
     "require-dev": {
         "facade/ignition": "^2.0",
@@ -64,7 +64,7 @@
     "repositories": [
         {
             "type": "path",
-            "url": "./modules/models-package/",
+            "url": "modules/metadata-package/",
             "options": {
                 "symlink": true
             }
