--- a/composer.json
+++ b/composer.json
@@ -14,7 +14,8 @@
         "guzzlehttp/guzzle": "^6.3",
         "laravel/framework": "^7.0",
         "laravel/tinker": "^2.0",
-        "satis2020/metadata-package": "^1.0"
+        "satis2020/metadata-package": "^1.0",
+        "satis2020/users-package": "^1.0"
     },
     "require-dev": {
         "facade/ignition": "^2.0",
@@ -62,6 +63,13 @@
         ]
     },
     "repositories": [
+        {
+            "type": "path",
+            "url": "modules/users-package/",
+            "options": {
+                "symlink": true
+            }
+        },
         {
             "type": "path",
             "url": "modules/metadata-package/",
