--- a/modules/external-dependencies-package/composer.json
+++ b/modules/external-dependencies-package/composer.json
@@ -14,7 +14,9 @@
         }
     ],
     "require": {
-        "spatie/laravel-translatable" : "^4.3"
+        "spatie/laravel-translatable" : "^4.3",
+        "spatie/laravel-permission": "^3.11",
+        "laravel/passport": "^8.4"
     },
     "require-dev": {
     },
