--- a/composer.json
+++ b/composer.json
@@ -14,6 +14,7 @@
         "guzzlehttp/guzzle": "^6.3",
         "laravel/framework": "^7.0",
         "laravel/tinker": "^2.0",
+        "satis2020/configurations-package": "^1.0",
         "satis2020/metadata-package": "^1.0",
         "satis2020/users-package": "^1.0"
     },
@@ -87,6 +88,13 @@
         {
             "type": "path",
             "url": "modules/users-package/",
+            "options": {
+                "symlink": true
+            }
+        },
+        {
+            "type": "path",
+            "url": "modules/configurations-package/",
             "options": {
                 "symlink": true
             }
