--- a/composer.json
+++ b/composer.json
@@ -14,8 +14,9 @@
         "guzzlehttp/guzzle": "^6.3",
         "laravel/framework": "^7.0",
         "laravel/tinker": "^2.0",
-        "satis2020/faq-package": "^1.0",
         "satis2020/configurations-package": "^1.0",
+        "satis2020/faq-package": "^1.0",
+        "satis2020/institutions-package": "^1.0",
         "satis2020/metadata-package": "^1.0",
         "satis2020/users-package": "^1.0"
     },
@@ -103,6 +104,13 @@
         {
             "type": "path",
             "url": "modules/faq-package/",
+            "options": {
+                "symlink": true
+            }
+        },
+        {
+            "type": "path",
+            "url": "modules/institutions-package/",
             "options": {
                 "symlink": true
             }
