--- a/composer.json
+++ b/composer.json
@@ -106,6 +106,13 @@
             "options": {
                 "symlink": true
             }
+        },
+        {
+            "type": "path",
+            "url": "modules/performance-indicator-package/",
+            "options": {
+                "symlink": true
+            }
         }
     ]
 }
