--- a/composer.json
+++ b/composer.json
@@ -19,6 +19,7 @@
         "satis2020/institutions-package": "^1.0",
         "satis2020/metadata-package": "^1.0",
         "satis2020/performance-indicator-package": "^1.0",
+        "satis2020/unit-package": "^1.0",
         "satis2020/users-package": "^1.0"
     },
     "require-dev": {
@@ -119,6 +120,13 @@
         {
             "type": "path",
             "url": "modules/performance-indicator-package/",
+            "options": {
+                "symlink": true
+            }
+        },
+        {
+            "type": "path",
+            "url": "modules/unit-package/",
             "options": {
                 "symlink": true
             }
