--- a/composer.json
+++ b/composer.json
@@ -14,6 +14,7 @@
         "guzzlehttp/guzzle": "^6.3",
         "laravel/framework": "^7.0",
         "laravel/tinker": "^2.0",
+        "satis2020/clients-package": "^1.0",
         "satis2020/configurations-package": "^1.0",
         "satis2020/faq-package": "^1.0",
         "satis2020/institutions-package": "^1.0",
@@ -119,6 +120,13 @@
         {
             "type": "path",
             "url": "modules/performance-indicator-package/",
+            "options": {
+                "symlink": true
+            }
+        },
+        {
+            "type": "path",
+            "url": "modules/clients-package/",
             "options": {
                 "symlink": true
             }
