--- a/composer.json
+++ b/composer.json
@@ -22,6 +22,7 @@
         "satis2020/metadata-package": "^1.0",
         "satis2020/performance-indicator-package": "^1.0",
         "satis2020/position-package": "^1.0",
+        "satis2020/staff-package": "^1.0",
         "satis2020/unit-package": "^1.0",
         "satis2020/users-package": "^1.0"
     },
@@ -144,6 +145,13 @@
         {
             "type": "path",
             "url": "modules/position-package/",
+            "options": {
+                "symlink": true
+            }
+        },
+        {
+            "type": "path",
+            "url": "modules/staff-package/",
             "options": {
                 "symlink": true
             }
