--- a/composer.json
+++ b/composer.json
@@ -26,7 +26,8 @@
         "satis2020/severity-level-package": "^1.0",
         "satis2020/staff-package": "^1.0",
         "satis2020/unit-package": "^1.0",
-        "satis2020/users-package": "^1.0"
+        "satis2020/users-package": "^1.0",
+        "ext-json": "*"
     },
     "require-dev": {
         "facade/ignition": "^2.0",
