--- a/composer.json
+++ b/composer.json
@@ -9,6 +9,7 @@
     "license": "MIT",
     "require": {
         "php": "^7.2.5",
+        "ext-json": "*",
         "doctrine/dbal": "^2.10",
         "fideloper/proxy": "^4.2",
         "fruitcake/laravel-cors": "^1.0",
@@ -22,12 +23,11 @@
         "satis2020/institutions-package": "^1.0",
         "satis2020/metadata-package": "^1.0",
         "satis2020/performance-indicator-package": "^1.0",
-        "satis2020/position-package": "^1.0",
+        "satis2020/position": "^1.0",
         "satis2020/severity-level-package": "^1.0",
         "satis2020/staff-package": "^1.0",
         "satis2020/unit-package": "^1.0",
-        "satis2020/users-package": "^1.0",
-        "ext-json": "*"
+        "satis2020/users-package": "^1.0"
     },
     "require-dev": {
         "facade/ignition": "^2.0",
@@ -147,7 +147,7 @@
         },
         {
             "type": "path",
-            "url": "modules/position-package/",
+            "url": "modules/position/",
             "options": {
                 "symlink": true
             }
