--- a/composer.json
+++ b/composer.json
@@ -16,14 +16,19 @@
         "guzzlehttp/guzzle": "^6.3",
         "laravel/framework": "^7.0",
         "laravel/tinker": "^2.0",
+        "satis2020/any-institution-unit": "^1.0",
+        "satis2020/category-client": "^1.0",
         "satis2020/claim-object-package": "^1.0",
         "satis2020/configurations-package": "^1.0",
         "satis2020/faq-package": "^1.0",
         "satis2020/institutions-package": "^1.0",
         "satis2020/metadata-package": "^1.0",
+        "satis2020/my-institution-unit": "^1.0",
         "satis2020/performance-indicator-package": "^1.0",
         "satis2020/severity-level-package": "^1.0",
         "satis2020/staff-package": "^1.0",
+        "satis2020/type-client": "^1.0",
+        "satis2020/type-unit": "^1.0",
         "satis2020/users-package": "^1.0"
     },
     "require-dev": {
