--- a/modules/staff-from-any-unit/composer.json
+++ b/modules/staff-from-any-unit/composer.json
@@ -1,6 +1,6 @@
 {
-  "name": "satis2020/staff-package",
-  "description": "satis2020/staff-package est un module qui va permettre de gérer les agents des institutions",
+  "name": "satis2020/staff-from-any-unit",
+  "description": "satis2020/staff-from-any-unit est un module qui va permettre de gérer les agents de n'importe quelle institution qui sont liés a une unité",
   "license": "DMD",
   "version" : "1.0.0",
   "authors": [
@@ -20,14 +20,14 @@
   },
   "autoload": {
     "psr-4": {
-      "Satis2020\\StaffPackage\\": "src/",
-      "Satis2020\\StaffPackage\\Database\\Seeds\\": "database/seeds/"
+      "Satis2020\\StaffFromAnyUnit\\": "src/",
+      "Satis2020\\StaffFromAnyUnit\\Database\\Seeds\\": "database/seeds/"
     }
   },
   "extra": {
     "laravel": {
       "providers": [
-        "Satis2020\\StaffPackage\\Providers\\StaffPackageServiceProvider"
+        "Satis2020\\StaffFromAnyUnit\\Providers\\StaffFromAnyUnitServiceProvider"
       ]
     }
   }
