--- a/composer.json
+++ b/composer.json
@@ -16,6 +16,7 @@
         "guzzlehttp/guzzle": "^6.3",
         "laravel/framework": "^7.0",
         "laravel/tinker": "^2.0",
+        "satis2020/any-institution": "^1.0",
         "satis2020/any-institution-unit": "^1.0",
         "satis2020/category-client": "^1.0",
         "satis2020/claim-object-package": "^1.0",
