--- a/composer.json
+++ b/composer.json
@@ -19,6 +19,8 @@
         "satis2020/any-institution": "^1.0",
         "satis2020/any-institution-unit": "^1.0",
         "satis2020/category-client": "^1.0",
+        "satis2020/claim-category": "^1.0",
+        "satis2020/claim-object": "^1.0",
         "satis2020/claim-object-package": "^1.0",
         "satis2020/configurations-package": "^1.0",
         "satis2020/faq-package": "^1.0",
@@ -254,6 +256,20 @@
         {
             "type": "path",
             "url": "modules/my-institution/",
+            "options": {
+                "symlink": true
+            }
+        },
+        {
+            "type": "path",
+            "url": "modules/claim-object/",
+            "options": {
+                "symlink": true
+            }
+        },
+        {
+            "type": "path",
+            "url": "modules/claim-category/",
             "options": {
                 "symlink": true
             }
