--- a/composer.json
+++ b/composer.json
@@ -21,6 +21,7 @@
         "satis2020/category-client": "^1.0",
         "satis2020/claim-category": "^1.0",
         "satis2020/claim-object": "^1.0",
+        "satis2020/client-from-any-institution": "^1.0",
         "satis2020/client-from-my-institution": "^1.0",
         "satis2020/configuration": "^1.0",
         "satis2020/faq-package": "^1.0",
