--- a/composer.json
+++ b/composer.json
@@ -46,6 +46,7 @@
         "satis2020/type-unit": "^1.0",
         "satis2020/update-claim-against-any-institution": "^1.0",
         "satis2020/update-claim-against-my-institution": "^1.0",
+        "satis2020/update-claim-without-client": "^1.0",
         "satis2020/users-package": "^1.0",
         "satis2020/without-link-with-institution-unit": "^1.0"
     },
