Création package claim awaiting tretment

--- a/composer.json
+++ b/composer.json
@@ -394,6 +394,13 @@
       "options": {
         "symlink": true
       }
+    },
+    {
+      "type": "path",
+      "url": "modules/claim-awaiting-treatment/",
+      "options": {
+        "symlink": true
+      }
     }
   ]
 }
