--- a/composer.json
+++ b/composer.json
@@ -418,6 +418,13 @@
       "options": {
         "symlink": true
       }
+    },
+    {
+      "type": "path",
+      "url": "modules/claim-assignment-to-staff/",
+      "options": {
+        "symlink": true
+      }
     }
   ]
 }
