--- a/composer.json
+++ b/composer.json
@@ -20,6 +20,7 @@
     "satis2020/any-institution-unit": "^1.0",
     "satis2020/category-client": "^1.0",
     "satis2020/channel": "^1.0",
+    "satis2020/claim-assignment-to-staff": "^1.0",
     "satis2020/claim-awaiting-assignment": "^1.0",
     "satis2020/claim-awaiting-treatment": "^1.0",
     "satis2020/claim-category": "^1.0",
