--- a/composer.json
+++ b/composer.json
@@ -27,6 +27,7 @@
     "satis2020/claim-category": "^1.0",
     "satis2020/claim-object": "^1.0",
     "satis2020/claim-object-requirement": "^1.0",
+    "satis2020/claim-satisfaction-measured": "^1.0",
     "satis2020/client-from-any-institution": "^1.0",
     "satis2020/client-from-my-institution": "^1.0",
     "satis2020/configuration": "^1.0",
@@ -47,6 +48,8 @@
     "satis2020/register-claim-against-my-institution": "^1.0",
     "satis2020/register-claim-without-client": "^1.0",
     "satis2020/relationship": "^1.0",
+    "satis2020/reporting-claim-any-institution": "^1.0",
+    "satis2020/reporting-claim-my-institution": "^1.0",
     "satis2020/severity-level": "^1.0",
     "satis2020/staff-from-any-unit": "^1.0",
     "satis2020/staff-from-maybe-no-unit": "^1.0",
@@ -447,6 +450,27 @@
     {
       "type": "path",
       "url": "modules/monitoring-claim-my-institution/",
+      "options": {
+        "symlink": true
+      }
+    },
+    {
+      "type": "path",
+      "url": "modules/reporting-claim-any-institution/",
+      "options": {
+        "symlink": true
+      }
+    },
+    {
+      "type": "path",
+      "url": "modules/reporting-claim-my-institution/",
+      "options": {
+        "symlink": true
+      }
+    },
+    {
+      "type": "path",
+      "url": "modules/claim-satisfaction-measured/",
       "options": {
         "symlink": true
       }
