--- a/composer.json
+++ b/composer.json
@@ -31,6 +31,7 @@
     "satis2020/client-from-my-institution": "^1.0",
     "satis2020/configuration": "^1.0",
     "satis2020/currency": "^1.0",
+    "satis2020/dashboard": "^1.0",
     "satis2020/faq-package": "^1.0",
     "satis2020/institution": "^1.0",
     "satis2020/metadata-package": "^1.0",
@@ -447,6 +448,13 @@
     {
       "type": "path",
       "url": "modules/monitoring-claim-my-institution/",
+      "options": {
+        "symlink": true
+      }
+    },
+    {
+      "type": "path",
+      "url": "modules/dashboard/",
       "options": {
         "symlink": true
       }
