--- a/modules/external-dependencies-package/composer.json
+++ b/modules/external-dependencies-package/composer.json
@@ -17,7 +17,8 @@
         "spatie/laravel-translatable" : "^4.3",
         "spatie/laravel-permission": "^3.11",
         "laravel/passport": "^8.4",
-        "cviebrock/eloquent-sluggable": "^7.0"
+        "cviebrock/eloquent-sluggable": "^7.0",
+        "maatwebsite/excel": "^3.1"
     },
     "require-dev": {
     },
