dev discussion features

--- a/composer.json
+++ b/composer.json
@@ -33,6 +33,7 @@
     "satis2020/configuration": "^1.0",
     "satis2020/currency": "^1.0",
     "satis2020/dashboard": "^1.0",
+    "satis2020/discussion": "^1.0",
     "satis2020/faq-package": "^1.0",
     "satis2020/institution": "^1.0",
     "satis2020/metadata-package": "^1.0",
@@ -479,6 +480,13 @@
     {
       "type": "path",
       "url": "modules/dashboard/",
+      "options": {
+        "symlink": true
+      }
+    },
+    {
+      "type": "path",
+      "url": "modules/discussion/",
       "options": {
         "symlink": true
       }
