--- a/modules/external-dependencies-package/composer.json
+++ b/modules/external-dependencies-package/composer.json
@@ -18,7 +18,8 @@
         "spatie/laravel-permission": "^3.11",
         "laravel/passport": "^8.4",
         "cviebrock/eloquent-sluggable": "^7.0",
-        "maatwebsite/excel": "^3.1"
+        "maatwebsite/excel": "^3.1",
+        "barryvdh/laravel-dompdf": "^0.8"
     },
     "require-dev": {
     },
