--- a/composer.json
+++ b/composer.json
@@ -36,6 +36,7 @@
     "satis2020/discussion": "^1.0",
     "satis2020/faq-package": "^1.0",
     "satis2020/institution": "^1.0",
+    "satis2020/message-api": "^1.0",
     "satis2020/metadata-package": "^1.0",
     "satis2020/monitoring-claim-any-institution": "^1.0",
     "satis2020/monitoring-claim-my-institution": "^1.0",
@@ -496,6 +497,13 @@
     {
       "type": "path",
       "url": "modules/notification/",
+      "options": {
+        "symlink": true
+      }
+    },
+    {
+      "type": "path",
+      "url": "modules/message-api/",
       "options": {
         "symlink": true
       }
