--- a/composer.json
+++ b/composer.json
@@ -56,6 +56,7 @@
     "satis2020/reporting-claim-my-institution": "^1.0",
     "satis2020/services-package": "^1.0",
     "satis2020/severity-level": "^1.0",
+    "satis2020/staff-feedback-channel": "^1.0",
     "satis2020/staff-from-any-unit": "^1.0",
     "satis2020/staff-from-maybe-no-unit": "^1.0",
     "satis2020/staff-from-my-unit": "^1.0",
@@ -504,6 +505,13 @@
     {
       "type": "path",
       "url": "modules/message-api/",
+      "options": {
+        "symlink": true
+      }
+    },
+    {
+      "type": "path",
+      "url": "modules/staff-feedback-channel/",
       "options": {
         "symlink": true
       }
