--- a/composer.json
+++ b/composer.json
@@ -18,6 +18,7 @@
     "laravel/tinker": "^2.0",
     "satis2020/any-institution": "^1.0",
     "satis2020/any-institution-unit": "^1.0",
+    "satis2020/any-user": "^1.0",
     "satis2020/category-client": "^1.0",
     "satis2020/channel": "^1.0",
     "satis2020/claim-awaiting-assignment": "^1.0",
@@ -512,6 +513,13 @@
     {
       "type": "path",
       "url": "modules/staff-feedback-channel/",
+      "options": {
+        "symlink": true
+      }
+    },
+    {
+      "type": "path",
+      "url": "modules/any-user/",
       "options": {
         "symlink": true
       }
