--- a/composer.json
+++ b/composer.json
@@ -17,6 +17,7 @@
     "laravel/framework": "^7.0",
     "laravel/tinker": "^2.0",
     "satis2020/account-type": "^1.0",
+    "satis2020/any-claim-archived": "^1.0",
     "satis2020/any-institution": "^1.0",
     "satis2020/any-institution-unit": "^1.0",
     "satis2020/any-user": "^1.0",
@@ -29,7 +30,6 @@
     "satis2020/claim-category": "^1.0",
     "satis2020/claim-object": "^1.0",
     "satis2020/claim-object-requirement": "^1.0",
-    "satis2020/claim-satisfaction-measured": "^1.0",
     "satis2020/client-from-any-institution": "^1.0",
     "satis2020/client-from-my-institution": "^1.0",
     "satis2020/configuration": "^1.0",
@@ -42,6 +42,7 @@
     "satis2020/metadata-package": "^1.0",
     "satis2020/monitoring-claim-any-institution": "^1.0",
     "satis2020/monitoring-claim-my-institution": "^1.0",
+    "satis2020/my-claim-archived": "^1.0",
     "satis2020/my-institution": "^1.0",
     "satis2020/my-institution-unit": "^1.0",
     "satis2020/my-user": "^1.0",
@@ -58,6 +59,8 @@
     "satis2020/relationship": "^1.0",
     "satis2020/reporting-claim-any-institution": "^1.0",
     "satis2020/reporting-claim-my-institution": "^1.0",
+    "satis2020/satisfaction-measured-any-claim": "^1.0",
+    "satis2020/satisfaction-measured-my-claim": "^1.0",
     "satis2020/services-package": "^1.0",
     "satis2020/severity-level": "^1.0",
     "satis2020/staff-feedback-channel": "^1.0",
@@ -479,7 +482,14 @@
     },
     {
       "type": "path",
-      "url": "modules/claim-satisfaction-measured/",
+      "url": "modules/satisfaction-measured-any-claim/",
+      "options": {
+        "symlink": true
+      }
+    },
+    {
+      "type": "path",
+      "url": "modules/satisfaction-measured-my-claim/",
       "options": {
         "symlink": true
       }
@@ -536,6 +546,20 @@
     {
       "type": "path",
       "url": "modules/relance/",
+      "options": {
+        "symlink": true
+      }
+    },
+    {
+      "type": "path",
+      "url": "modules/any-claim-archived/",
+      "options": {
+        "symlink": true
+      }
+    },
+    {
+      "type": "path",
+      "url": "modules/my-claim-archived/",
       "options": {
         "symlink": true
       }
