--- a/modules/any-claim-archived/composer.json
+++ b/modules/any-claim-archived/composer.json
@@ -1,6 +1,6 @@
 {
-  "name": "satis2020/claim-satisfaction-measured",
-  "description": "satis2020/claim-satisfaction-measured est un package qui va la gestion des objets de plaintes et réclamations.",
+  "name": "satis2020/any-claim-archived",
+  "description": "satis2020/any-claim-archived est un package va permettre la gestion des archives des plaintes.",
   "license": "DMD",
   "version" : "1.0.0",
   "authors": [
@@ -20,14 +20,14 @@
   },
   "autoload": {
     "psr-4": {
-      "Satis2020\\ClaimSatisfactionMeasured\\": "src/",
-      "Satis2020\\ClaimSatisfactionMeasured\\Database\\Seeds\\": "database/seeds/"
+      "Satis2020\\AnyClaimArchived\\": "src/",
+      "Satis2020\\AnyClaimArchived\\Database\\Seeds\\": "database/seeds/"
     }
   },
   "extra": {
     "laravel": {
       "providers": [
-        "Satis2020\\ClaimSatisfactionMeasured\\Providers\\ClaimSatisfactionMeasuredServiceProvider"
+        "Satis2020\\AnyClaimArchived\\Providers\\AnyClaimArchivedServiceProvider"
       ]
     }
   }
