--- a/.env
+++ b/.env
@@ -2,7 +2,7 @@ APP_NAME="SATIS MACRO"
 APP_ENV=local
 APP_KEY=base64:Orzpq45AkNuS+NCrDElh4dQW2mTf8GPlttT0K7hFpF4=
 APP_DEBUG=true
-APP_URL=http://127.0.0.1:8000
+APP_URL=http://satis-macro.local
 APP_NATURE=MACRO
 
 LOG_CHANNEL=stack
