--- a/modules/faq/composer.json
+++ b/modules/faq/composer.json
@@ -1,6 +1,6 @@
 {
-  "name": "satis2020/faq-package",
-  "description": "satis2020/faq-package est un module qui va permettre la gestion des FAQ",
+  "name": "satis2020/faq",
+  "description": "satis2020/faq est un module qui va permettre la gestion des FAQ",
   "license": "DMD",
   "version" : "1.0.0",
   "authors": [
@@ -20,14 +20,14 @@
   },
   "autoload": {
     "psr-4": {
-      "Satis2020\\FaqPackage\\": "src/",
-      "Satis2020\\FaqPackage\\Database\\Seeds\\": "database/seeds/"
+      "Satis2020\\Faq\\": "src/",
+      "Satis2020\\Faq\\Database\\Seeds\\": "database/seeds/"
     }
   },
   "extra": {
     "laravel": {
       "providers": [
-        "Satis2020\\FaqPackage\\Providers\\FaqPackageServiceProvider"
+        "Satis2020\\Faq\\Providers\\FaqServiceProvider"
       ]
     }
   }
