--- a/composer.json
+++ b/composer.json
@@ -19,6 +19,7 @@
     "satis2020/account-type": "^1.0",
     "satis2020/any-claim-archived": "^1.0",
     "satis2020/any-institution": "^1.0",
+    "satis2020/any-institution-type-role": "^1.0",
     "satis2020/any-institution-unit": "^1.0",
     "satis2020/any-user": "^1.0",
     "satis2020/category-client": "^1.0",
@@ -68,6 +69,7 @@
     "satis2020/staff-from-any-unit": "^1.0",
     "satis2020/staff-from-maybe-no-unit": "^1.0",
     "satis2020/staff-from-my-unit": "^1.0",
+    "satis2020/staff-history": "^1.0",
     "satis2020/transfer-claim-to-circuit-unit": "^1.0",
     "satis2020/transfer-claim-to-targeted-institution": "^1.0",
     "satis2020/transfer-claim-to-unit": "^1.0",
@@ -568,6 +570,20 @@
     {
       "type": "path",
       "url": "modules/search/",
+      "options": {
+        "symlink": true
+      }
+    },
+    {
+      "type": "path",
+      "url": "modules/staff-history/",
+      "options": {
+        "symlink": true
+      }
+    },
+    {
+      "type": "path",
+      "url": "modules/any-institution-type-role/",
       "options": {
         "symlink": true
       }
