--- a/composer.json
+++ b/composer.json
@@ -20,6 +20,7 @@
     "satis2020/active-pilot": "^1.0",
     "satis2020/any-claim-archived": "^1.0",
     "satis2020/any-institution": "^1.0",
+    "satis2020/any-institution-module": "^1.0",
     "satis2020/any-institution-type-role": "^1.0",
     "satis2020/any-institution-unit": "^1.0",
     "satis2020/any-user": "^1.0",
@@ -600,6 +601,13 @@
     {
       "type": "path",
       "url": "modules/my-institution-type-role/",
+      "options": {
+        "symlink": true
+      }
+    },
+    {
+      "type": "path",
+      "url": "modules/any-institution-module/",
       "options": {
         "symlink": true
       }
