--- a/composer.json
+++ b/composer.json
@@ -42,6 +42,7 @@
     "satis2020/institution": "^1.0",
     "satis2020/message-api": "^1.0",
     "satis2020/metadata-package": "^1.0",
+    "satis2020/mobile-api": "^1.0",
     "satis2020/monitoring-claim-any-institution": "^1.0",
     "satis2020/monitoring-claim-my-institution": "^1.0",
     "satis2020/my-claim-archived": "^1.0",
@@ -600,6 +601,13 @@
     {
       "type": "path",
       "url": "modules/my-institution-type-role/",
+      "options": {
+        "symlink": true
+      }
+    },
+    {
+      "type": "path",
+      "url": "modules/mobile-api/",
       "options": {
         "symlink": true
       }
