--- a/composer.json
+++ b/composer.json
@@ -23,6 +23,7 @@
     "satis2020/any-institution-type-role": "^1.0",
     "satis2020/any-institution-unit": "^1.0",
     "satis2020/any-user": "^1.0",
+    "satis2020/attach-files-to-claim": "^1.0",
     "satis2020/category-client": "^1.0",
     "satis2020/channel": "^1.0",
     "satis2020/claim-awaiting-assignment": "^1.0",
@@ -624,6 +625,13 @@
     {
       "type": "path",
       "url": "modules/search-claim-my-reference/",
+      "options": {
+        "symlink": true
+      }
+    },
+    {
+      "type": "path",
+      "url": "modules/attach-files-to-claim/",
       "options": {
         "symlink": true
       }
