--- a/composer.json
+++ b/composer.json
@@ -65,6 +65,7 @@
     "satis2020/reporting-claim-any-institution": "^1.0",
     "satis2020/reporting-claim-my-institution": "^1.0",
     "satis2020/revive-staff": "^1.0",
+    "satis2020/revoke-claim": "^1.0",
     "satis2020/satisfaction-measured-any-claim": "^1.0",
     "satis2020/satisfaction-measured-my-claim": "^1.0",
     "satis2020/search": "^1.0",
@@ -640,6 +641,13 @@
     {
       "type": "path",
       "url": "modules/revive-staff/",
+      "options": {
+        "symlink": true
+      }
+    },
+    {
+      "type": "path",
+      "url": "modules/revoke-claim/",
       "options": {
         "symlink": true
       }
